# Integer

./: Integer.hpp  Integer_literal.hpp  LICENSE  README.md
tests/: CMakeLists.txt  run_tests.sh
tests/testcases/: accessors.cpp  constructors.cpp  info.cpp  literals.cpp
